# TickTrace

./: .gitignore  Cargo.toml  README.md
benches/: throughput.rs
examples/: dev.rs
src/: consumer.rs  lib.rs  main.rs  message.rs  processor.rs  server.rs
src/writer/: mod.rs  parquet.rs
