[package]
name = "tick_trace"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
rmp-serde = "1.3.0"
bytes = "1.5"
parquet = "49.0"
arrow = "49.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-queue = "0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.169"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde-with-str"] }
compact_str = { version = "0.8.1", features = ["serde"] }
flume = "0.11.1"
serde_arrow = { version = "0.12.3", features = ["arrow-49"] }
rust_decimal_macros = "1.34"
clap = { version = "4.5.26", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tempfile = "3.15.0"

[[bench]]
name = "throughput"
harness = false